--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="uz.technickpro.irregularverbs.ui.home.HomeFragment"
+        android:name="uz.technickpro.irregularverbs.ui.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="uz.technickpro.irregularverbs.ui.dashboard.BookMarksFragment"
+        android:name="uz.technickpro.irregularverbs.ui.BookMarksFragment"
         android:label="@string/title_bookmark"
         tools:layout="@layout/fragment_bookmark" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="uz.technickpro.irregularverbs.ui.notifications.NotificationsFragment"
+        android:name="uz.technickpro.irregularverbs.ui.NotificationsFragment"
         android:label="@string/title_info"
         tools:layout="@layout/fragment_info" />
 </navigation>
