--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -4,30 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.NotificationsFragment">
+    tools:context=".ui.InfoFragment">
 
 
     <TextView
         android:id="@+id/info_fg_email_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_baseline_email_24"
         android:drawablePadding="12dp"
+        android:layout_marginHorizontal="24dp"
         android:text="@string/email_address"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/custom_text"
+        android:padding="12dp"
         tools:ignore="RtlCompat" />
 
 
     <TextView
         android:id="@+id/info_fg_tg_channel_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:drawableStart="@drawable/ic_baseline_group_24"
         android:drawablePadding="12dp"
+        android:background="@drawable/custom_text"
+        android:padding="12dp"
+        android:layout_marginHorizontal="24dp"
         android:text="@string/tg_channel"
         app:layout_constraintStart_toStartOf="@id/info_fg_email_text"
         app:layout_constraintTop_toBottomOf="@id/info_fg_email_text"
@@ -35,11 +41,14 @@
 
     <TextView
         android:id="@+id/info_fg_instagram_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:drawableStart="@drawable/ic_baseline_info_24"
         android:drawablePadding="12dp"
+        android:background="@drawable/custom_text"
+        android:padding="12dp"
+        android:layout_marginHorizontal="24dp"
         android:text="@string/instagram"
         app:layout_constraintStart_toStartOf="@id/info_fg_tg_channel_text"
         app:layout_constraintTop_toBottomOf="@id/info_fg_tg_channel_text"
@@ -47,15 +56,33 @@
 
     <TextView
         android:id="@+id/info_fb_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:background="@drawable/custom_text"
+        android:padding="12dp"
+        android:layout_marginHorizontal="24dp"
         android:drawableStart="@drawable/ic_baseline_bookmark_24"
         android:drawablePadding="12dp"
         android:text="@string/facebook"
         app:layout_constraintStart_toStartOf="@id/info_fg_instagram_text"
         app:layout_constraintTop_toBottomOf="@id/info_fg_instagram_text"
+        tools:ignore="RtlCompat" />
 
+
+    <TextView
+        android:id="@+id/info_fg_git_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        app:layout_constraintTop_toBottomOf="@id/info_fb_text"
+        android:text="GitHub"
+        android:background="@drawable/custom_text"
+        android:padding="12dp"
+        app:layout_constraintStart_toStartOf="@id/info_fb_text"
+        android:drawableStart="@drawable/ic_baseline_bookmark_border_24"
+        android:drawablePadding="12dp"
+        android:layout_marginTop="12dp"
         tools:ignore="RtlCompat" />
 
 
