--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="uz.technickpro.irregularverbs.ui.NotificationsFragment"
+        android:name="uz.technickpro.irregularverbs.ui.InfoFragment"
         android:label="@string/title_info"
         tools:layout="@layout/fragment_info" />
 </navigation>
