--- a/app/src/main/res/values/verb_string.xml
+++ b/app/src/main/res/values/verb_string.xml
@@ -1,51 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="abide">Abide</string>
+    <string name="arise">Arise</string>
+    <string name="awake">Awake</string>
     <string name="be">Be</string>
-    <string name="begin">Begin</string>
+    <string name="bear">Bear</string>
     <string name="beat">Beat</string>
     <string name="become">Become</string>
+    <string name="beget">Beget</string>
+    <string name="begin">Begin</string>
     <string name="bend">Bend</string>
     <string name="bet">Bet</string>
-    <string name="bit">Bit</string>
+    <string name="bite">Bite</string>
+    <string name="bleed">Bleed</string>
     <string name="blow">Blow</string>
-    <string name="break1">Break</string>
+    <string name="break_">Break</string>
     <string name="bring">Bring</string>
     <string name="broadcast">Broadcast</string>
     <string name="build">Build</string>
+    <string name="burn">Burn</string>
     <string name="burst">Burst</string>
     <string name="buy">Buy</string>
-    <string name="catch1">Catch</string>
+    <string name="can">Can</string>
+    <string name="cast">Cast</string>
+    <string name="catch_">Catch</string>
+    <string name="chide">Chide</string>
     <string name="choose">Choose</string>
+    <string name="cling">Cling</string>
+    <string name="clothe">Clothe</string>
     <string name="come">Come</string>
     <string name="cost">Cost</string>
+    <string name="creep">Creep</string>
     <string name="cut">Cut</string>
     <string name="deal">Deal</string>
     <string name="dig">Dig</string>
-    <string name="do1">Do</string>
-    <string name="draw">Draw</string>
-    <string name="dream">Dream</string>
-    <string name="drink">Drink</string>
-    <string name="drive">Drive</string>
+    <string name="dive">Dive</string>
+    <string name="do_">Do</string>
+    <string name="dwell">Dwell</string>
     <string name="eat">Eat</string>
     <string name="fall">Fall</string>
     <string name="feed">Feed</string>
     <string name="feel">Feel</string>
     <string name="fight">Fight</string>
     <string name="find">Find</string>
-    <string name="fit">Fit</string>
+    <string name="flee">Flee</string>
+    <string name="fling">Fling</string>
     <string name="fly">Fly</string>
     <string name="forbid">Forbid</string>
+    <string name="forecast">Forecast</string>
+    <string name="foresee">Foresee</string>
     <string name="forget">Forget</string>
     <string name="forgive">Forgive</string>
+    <string name="forsake">Forsake</string>
     <string name="freeze">Freeze</string>
     <string name="get">Get</string>
-
-
-
-
-
-
-
+    <string name="give">Give</string>
+    <string name="go">Go</string>
+    <string name="grind">Grind</string>
+    <string name="grow">Grow</string>
+    <string name="hang">Hang</string>
+    <string name="have">Have</string>
+    <string name="hear">Hear</string>
+    <string name="hide">Hide</string>
+    <string name="hit">Hit</string>
+    <string name="hold">Hold</string>
+    <string name="hurt">Hurt</string>
+    <string name="keep">Keep</string>
+    <string name="kneel">Kneel</string>
+    <string name="know">Know</string>
+    <string name="lay">Lay</string>
+    <string name="lead">Lead</string>
+    <string name="lean">Lean</string>
+    <string name="leap">Leap</string>
+    <string name="learn">Learn</string>
+    <string name="leave">Leave</string>
+    <string name="lend">Lend</string>
+    <string name="let">Let</string>
+    <string name="lie">Lie</string>
+    <string name="light">Light</string>
+    <string name="lose">Lose</string>
+    <string name="make">Make</string>
+    <string name="mean">Mean</string>
+    <string name="meet">Meet</string>
+    <string name="mow">Mow</string>
+    <string name="offset">Offset</string>
+    <string name="overcome">Overcome</string>
+    <string name="partake">Partake</string>
+    <string name="pay">Pay</string>
+    <string name="plead">Plead</string>
+    <string name="preset">Preset</string>
+    <string name="prove">Prove</string>
+    <string name="put">Put</string>
+    <string name="quit">Quit</string>
+    <string name="read">Read</string>
+    <string name="relay">Relay</string>
+    <string name="rend">Rend</string>
+    <string name="rid">Rid</string>
+    <string name="ring">Ring</string>
+    <string name="rise">Rise</string>
+    <string name="run">Run</string>
+    <string name="saw">Saw</string>
+    <string name="say">Say</string>
+    <string name="see">See</string>
+    <string name="seek">Seek</string>
+    <string name="sell">Sell</string>
+    <string name="send">Send</string>
+    <string name="set">Set</string>
+    <string name="shake">Shake</string>
+    <string name="shed">Shed</string>
+    <string name="shine">Shine</string>
+    <string name="shoe">Shoe</string>
+    <string name="shoot">Shoot</string>
+    <string name="show">Show</string>
+    <string name="shut">Shut</string>
+    <string name="sing">Sing</string>
+    <string name="sink">Sink</string>
+    <string name="sit">Sit</string>
+    <string name="slay">Slay</string>
+    <string name="sleep">Sleep</string>
+    <string name="slide">Slide</string>
+    <string name="slit">Slit</string>
+    <string name="smell">Smell</string>
+    <string name="sow">Sow</string>
+    <string name="speak">Speak</string>
+    <string name="speed">Speed</string>
+    <string name="spell">Spell</string>
+    <string name="spend">Spend</string>
+    <string name="spill">Spill</string>
+    <string name="spin">Spin</string>
+    <string name="spit">Spit</string>
+    <string name="split">Split</string>
+    <string name="spoil">Spoil</string>
+    <string name="spread">Spread</string>
+    <string name="spring">Spring</string>
+    <string name="stand">Stand</string>
+    <string name="steal">Steal</string>
+    <string name="stick">Stick</string>
+    <string name="sting">Sting</string>
+    <string name="stink">Stink</string>
+    <string name="strew">Strew</string>
+    <string name="strike">Strike</string>
+    <string name="strive">Strive</string>
+    <string name="swear">Swear</string>
+    <string name="sweat">Sweat</string>
+    <string name="sweep">Sweep</string>
+    <string name="swell">Swell</string>
+    <string name="swim">Swim</string>
+    <string name="swing">Swing</string>
+    <string name="take">Take</string>
+    <string name="teach">Teach</string>
+    <string name="tear">Tear</string>
+    <string name="tell">Tell</string>
+    <string name="think">Think</string>
+    <string name="thrive">Thrive</string>
+    <string name="throw_">Throw</string>
+    <string name="thrust">Thrust</string>
+    <string name="typeset">Typeset</string>
+    <string name="undergo">Undergo</string>
+    <string name="understand">Understand</string>
+    <string name="wake">Wake</string>
+    <string name="wear">Wear</string>
+    <string name="weep">Weep</string>
+    <string name="wet">Wet</string>
+    <string name="win">Win</string>
+    <string name="wind">Wind</string>
+    <string name="withdraw">Withdraw</string>
+    <string name="wring">Wring</string>
+    <string name="write">Write</string>
 
 </resources>
