--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".ui.InfoFragment">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_margin="24dp"
+        android:src="@drawable/download"
+        app:civ_border_color="#2196F3"
+        app:civ_border_width="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/info_fg_email_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/info_fg_email_text"
