Adapter RecyclerView.Adapter'ga o'zgartirildi

--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -6,97 +6,120 @@
     android:layout_height="match_parent"
     tools:context=".ui.InfoFragment">
 
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/info_fg_top_const"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/web_design"
+        app:layout_constraintBottom_toTopOf="@id/info_fg_bottom_const"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_weight=".3" />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_width="108dp"
+        android:layout_height="108dp"
         android:layout_margin="24dp"
-        android:src="@drawable/download"
-        app:civ_border_color="#2196F3"
-        app:civ_border_width="1dp"
-        app:layout_constraintBottom_toTopOf="@+id/info_fg_email_text"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/abs"
+        app:civ_border_color="#FFFFFF"
+        app:civ_border_width="3dp"
+        app:layout_constraintHorizontal_bias=".9"
+        app:layout_constraintTop_toBottomOf="@id/info_fg_top_const"
+        app:layout_constraintBottom_toTopOf="@id/info_fg_bottom_const"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
-    <TextView
-        android:id="@+id/info_fg_email_text"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/info_fg_bottom_const"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_baseline_email_24"
-        android:drawablePadding="12dp"
-        android:layout_marginHorizontal="24dp"
-        android:text="@string/email_address"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/custom_text"
-        android:padding="12dp"
-        tools:ignore="RtlCompat" />
+        app:layout_constraintTop_toBottomOf="@id/info_fg_top_const"
+        app:layout_constraintVertical_weight=".6">
 
 
-    <TextView
-        android:id="@+id/info_fg_tg_channel_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:drawableStart="@drawable/ic_baseline_group_24"
-        android:drawablePadding="12dp"
-        android:background="@drawable/custom_text"
-        android:padding="12dp"
-        android:layout_marginHorizontal="24dp"
-        android:text="@string/tg_channel"
-        app:layout_constraintStart_toStartOf="@id/info_fg_email_text"
-        app:layout_constraintTop_toBottomOf="@id/info_fg_email_text"
-        tools:ignore="RtlCompat" />
-
-    <TextView
-        android:id="@+id/info_fg_instagram_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:drawableStart="@drawable/ic_baseline_info_24"
-        android:drawablePadding="12dp"
-        android:background="@drawable/custom_text"
-        android:padding="12dp"
-        android:layout_marginHorizontal="24dp"
-        android:text="@string/instagram"
-        app:layout_constraintStart_toStartOf="@id/info_fg_tg_channel_text"
-        app:layout_constraintTop_toBottomOf="@id/info_fg_tg_channel_text"
-        tools:ignore="RtlCompat" />
-
-    <TextView
-        android:id="@+id/info_fb_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/custom_text"
-        android:padding="12dp"
-        android:layout_marginHorizontal="24dp"
-        android:drawableStart="@drawable/ic_baseline_bookmark_24"
-        android:drawablePadding="12dp"
-        android:text="@string/facebook"
-        app:layout_constraintStart_toStartOf="@id/info_fg_instagram_text"
-        app:layout_constraintTop_toBottomOf="@id/info_fg_instagram_text"
-        tools:ignore="RtlCompat" />
+        <TextView
+            android:id="@+id/info_fg_email_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:background="@drawable/custom_text"
+            android:drawableStart="@drawable/ic_baseline_email_24"
+            android:drawablePadding="12dp"
+            android:padding="12dp"
+            android:text="@string/email_address"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias=".3"
+            tools:ignore="RtlCompat" />
 
 
-    <TextView
-        android:id="@+id/info_fg_git_txt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="24dp"
-        app:layout_constraintTop_toBottomOf="@id/info_fb_text"
-        android:text="GitHub"
-        android:background="@drawable/custom_text"
-        android:padding="12dp"
-        app:layout_constraintStart_toStartOf="@id/info_fb_text"
-        android:drawableStart="@drawable/ic_baseline_bookmark_border_24"
-        android:drawablePadding="12dp"
-        android:layout_marginTop="12dp"
-        tools:ignore="RtlCompat" />
+        <TextView
+            android:id="@+id/info_fg_tg_channel_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/custom_text"
+            android:drawableStart="@drawable/ic_baseline_group_24"
+            android:drawablePadding="12dp"
+            android:padding="12dp"
+            android:text="@string/tg_channel"
+            app:layout_constraintStart_toStartOf="@id/info_fg_email_text"
+            app:layout_constraintTop_toBottomOf="@id/info_fg_email_text"
+            tools:ignore="RtlCompat" />
+
+        <TextView
+            android:id="@+id/info_fg_instagram_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/custom_text"
+            android:drawableStart="@drawable/ic_baseline_info_24"
+            android:drawablePadding="12dp"
+            android:padding="12dp"
+            android:text="@string/instagram"
+            app:layout_constraintStart_toStartOf="@id/info_fg_tg_channel_text"
+            app:layout_constraintTop_toBottomOf="@id/info_fg_tg_channel_text"
+            tools:ignore="RtlCompat" />
+
+        <TextView
+            android:id="@+id/info_fb_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/custom_text"
+            android:drawableStart="@drawable/ic_baseline_bookmark_24"
+            android:drawablePadding="12dp"
+            android:padding="12dp"
+            android:text="@string/facebook"
+            app:layout_constraintStart_toStartOf="@id/info_fg_instagram_text"
+            app:layout_constraintTop_toBottomOf="@id/info_fg_instagram_text"
+            tools:ignore="RtlCompat" />
+
+
+        <TextView
+            android:id="@+id/info_fg_git_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/custom_text"
+            android:drawableStart="@drawable/ic_baseline_bookmark_border_24"
+            android:drawablePadding="12dp"
+            android:padding="12dp"
+            android:text="GitHub"
+            app:layout_constraintStart_toStartOf="@id/info_fb_text"
+            app:layout_constraintTop_toBottomOf="@id/info_fb_text"
+            tools:ignore="RtlCompat" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
