--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,13 +7,10 @@
     android:background="#C3C1C1"
     tools:context=".ui.HomeFragment">
 
-    <GridView
-        android:id="@+id/home_grid_root"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="2"
-        android:padding="6dp"
-        android:scrollbars="none" />
+        android:layout_height="match_parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
